--- a/Himeno_Flex/MainPage.xaml
+++ b/Himeno_Flex/MainPage.xaml
@@ -4,7 +4,7 @@
              x:Class="Himeno_Flex.MainPage">
 
     <Grid>
-        <!-- ここからメインUI -->
+        <!-- # ここから メインUI # -->
         <Grid.RowDefinitions>
             <RowDefinition
                 Height="80"/>
@@ -24,9 +24,9 @@
                    FontSize="40"
                    TextColor="white"/>
         </StackLayout>
-        <!-- ここまでメインUI -->
+        <!-- # ここまで メインUI # -->
         
-        <!-- ベンチ結果表示部分 -->
+        <!-- # ここから ベンチ結果表示部分 # -->
         <ScrollView Grid.Row="1"
                     Margin="60"
                     Padding="50"
@@ -35,55 +35,70 @@
             <VerticalStackLayout>
                 <Button Text="ベンチマーク開始"
                         FontSize="22"
-                        Margin="10,0,10,22"/>
+                        Margin="10,0,10,22"
+                        Clicked="Button_Clicked"/>
 
                 <HorizontalStackLayout>
                     <Label Text="MFLOPS: "
                            FontSize="22"/>
-                    <Label Text=""/>
+                    <Label Text=""
+                           x:Name="mflops1"
+                           FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
                     <Label Text="時間(秒): "
                            FontSize="22"/>
-                    <Label Text=""/>
+                    <Label Text=""
+                           x:Name="time"
+                           FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
                     <Label Text="ループ回数: "
                            FontSize="22"/>
-                    <Label Text=""/>
+                    <Label Text=""
+                           x:Name="loop"
+                           FontSize="22"/>
                 </HorizontalStackLayout>
 
                 <HorizontalStackLayout>
                     <Label Text="誤差: "
                            FontSize="22"/>
-                    <Label Text=""/>
+                    <Label Text=""
+                           x:Name="gosa"
+                           FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
                     <Label Text="MFLOPS 測定: "
                            FontSize="22"/>
-                    <Label Text=""/>
+                    <Label Text=""
+                           x:Name="mflops2"
+                           FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
                     <Label Text="CPU: "
                            FontSize="22"/>
-                    <Label Text=""/>
+                    <Label Text=""
+                           x:Name="cpu"
+                           FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
                     <Label Text="Pentium3 600MHz基準: "
                            FontSize="22"/>
-                    <Label Text=""/>
+                    <Label Text=""
+                           x:Name="pentium"
+                           FontSize="22"/>
                 </HorizontalStackLayout>
             </VerticalStackLayout>
-
         </ScrollView>
+        <!-- # ここまで ベンチ結果表示部分 # -->
 
-        <!-- ここからメインUI -->
+        <!-- # ここから メインUI # -->
         <Path Grid.RowSpan="2"
               Fill="LightCyan"
               Data="M -100,200 L -100,280 L 280,-100 L 200,-100 Z"
               IsEnabled="False" />
         <!-- IsEnabled…マウスクリック無効(有効だと上記のScrollViewでスクロールができないから) -->
-        <!-- ここまでメインUI -->
+        <!-- # ここまで メインUI # -->
 
     </Grid>
 
