--- a/Himeno_Flex/MainPage.xaml
+++ b/Himeno_Flex/MainPage.xaml
@@ -28,8 +28,8 @@
         
         <!-- # ここから ベンチ結果表示部分 # -->
         <ScrollView Grid.Row="1"
-                    Margin="60"
-                    Padding="50"
+                    Margin="30"
+                    Padding="30"
                     BackgroundColor="{AppThemeBinding Light=AliceBlue, Dark=#121212}">
             
             <VerticalStackLayout>
@@ -39,22 +39,25 @@
                         Clicked="Button_Clicked"/>
 
                 <HorizontalStackLayout>
-                    <Label Text="MFLOPS: "
-                           FontSize="22"/>
+                    <Label Text="MFLOPS:"
+                           FontSize="22"
+                           Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="mflops1"
                            FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
-                    <Label Text="時間(秒): "
-                           FontSize="22"/>
+                    <Label Text="時間(秒):"
+                           FontSize="22"
+                           Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="time"
                            FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
-                    <Label Text="ループ回数: "
-                           FontSize="22"/>
+                    <Label Text="実行ループ回数:"
+                           FontSize="22"
+                           Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="loop"
                            FontSize="22"/>
@@ -62,32 +65,41 @@
 
                 <HorizontalStackLayout>
                     <Label Text="誤差: "
-                           FontSize="22"/>
+                           FontSize="22"
+                           Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="gosa"
                            FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
-                    <Label Text="MFLOPS 測定: "
-                           FontSize="22"/>
+                    <Label Text="MFLOPS:"
+                           FontSize="22"
+                           Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="mflops2"
                            FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
-                    <Label Text="CPU: "
-                           FontSize="22"/>
+                    <Label Text="CPU:"
+                           FontSize="22"
+                           Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="cpu"
                            FontSize="22"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
-                    <Label Text="Pentium3 600MHz基準: "
-                           FontSize="22"/>
+                    <Label Text="Pentium3 600MHz基準:"
+                           FontSize="22"
+                           Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="pentium"
                            FontSize="22"/>
                 </HorizontalStackLayout>
+
+                <Button Text="出力"
+                        FontSize="22"
+                        Margin="10,22,10,0"
+                        Clicked="Button_Clicked_1"/>
             </VerticalStackLayout>
         </ScrollView>
         <!-- # ここまで ベンチ結果表示部分 # -->
