不要な部分を削除

--- a/Himeno_Flex/MainPage.xaml
+++ b/Himeno_Flex/MainPage.xaml
@@ -65,30 +65,14 @@
                 </HorizontalStackLayout>
 
                 <HorizontalStackLayout>
-                    <Label Text="MFLOPS(仮):"
+                    <Label Text="MFLOPS:"
                            FontSize="22"
                            Margin="0,0,11,0"/>
                     <Label Text=""
                            x:Name="mflops1"
                            FontSize="22"/>
                 </HorizontalStackLayout>
-                <HorizontalStackLayout>
-                    <Label Text="MFLOPS(実測):"
-                           FontSize="22"
-                           Margin="0,0,11,0"/>
-                    <Label Text=""
-                           x:Name="mflops2"
-                           FontSize="22"/>
-                </HorizontalStackLayout>
-                
-                <HorizontalStackLayout>
-                    <Label Text="時間(秒):"
-                           FontSize="22"
-                           Margin="0,0,11,0"/>
-                    <Label Text=""
-                           x:Name="time"
-                           FontSize="22"/>
-                </HorizontalStackLayout>
+
                 <HorizontalStackLayout>
                     <Label Text="実行ループ回数:"
                            FontSize="22"
@@ -106,6 +90,7 @@
                            x:Name="gosa"
                            FontSize="22"/>
                 </HorizontalStackLayout>
+                
                 <HorizontalStackLayout>
                     <Label Text="CPU:"
                            FontSize="22"
@@ -114,8 +99,9 @@
                            x:Name="cpu"
                            FontSize="22"/>
                 </HorizontalStackLayout>
+                
                 <HorizontalStackLayout>
-                    <Label Text="Pentium3 600MHz基準:"
+                    <Label Text="Pentium3:"
                            FontSize="22"
                            Margin="0,0,11,0"/>
                     <Label Text=""
